RESOLVED FIXED286999
Fix unexpected smart pointer warnings in Page, StyleResolveForFont, and NavigationState
https://bugs.webkit.org/show_bug.cgi?id=286999
Summary Fix unexpected smart pointer warnings in Page, StyleResolveForFont, and Navig...
Ryosuke Niwa
Reported 2025-02-03 23:44:36 PST
Fix warnings in these files.
Attachments
Ryosuke Niwa
Comment 1 2025-02-03 23:47:29 PST
EWS
Comment 2 2025-02-04 16:17:22 PST
Committed 289835@main (9362bd1ee033): <https://commits.webkit.org/289835@main> Reviewed commits have been landed. Closing PR #39974 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2025-02-04 16:18:54 PST
Note You need to log in before you can comment on or make changes to this bug.