Fix unexpected smart pointer warnings in Page, StyleResolveForFont, and NavigationState https://bugs.webkit.org/show_bug.cgi?id=286999

Reviewed by Chris Dumez.

Address smart pointer static analyzer warnings in these files.

* Source/WebCore/page/Page.cpp:
(WebCore::Page::screenPropertiesDidChange):
(WebCore::Page::updateRendering):
(WebCore::dispatchPrintEvent):
* Source/WebCore/style/StyleResolveForFont.cpp:
(WebCore::Style::fontWeightFromCSSValue):
(WebCore::Style::fontStretchFromCSSValue):
(WebCore::Style::fontStyleAngleFromCSSValue):
(WebCore::Style::fontFeatureSettingsFromCSSValue):
(WebCore::Style::fontVariationSettingsFromCSSValue):
* Source/WebKit/UIProcess/Cocoa/NavigationState.mm:
(WebKit::NavigationState::NavigationClient::decidePolicyForNavigationAction):

Canonical link: https://commits.webkit.org/289835@main